--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <h2>FizzBuzz Kalkulator</h2>
         <form>
             <input name="tall" placeholder="Skriv inn et tall" type="number">
-            <button>FizzBuzz</button>
+            <button>Regn ut FizzBuzz</button>
         </form>
         <p>Resultatet er: <span class="resultat"></span></p>
     </div>
